// Modelo implementado en las migraciones de Django del MVP 1.0.0.

Enum user_role {
  administrator
  participant
}

Enum chore_frequency {
  once
  daily
  weekly
  monthly
}

Table users {
  id bigint [pk, increment]
  username varchar(150) [not null, unique]
  email varchar(254) [not null, unique]
  display_name varchar(150) [not null]
  password_hash varchar(255) [not null, note: 'Gestionado por Django; nunca texto plano']
  role user_role [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table zones {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table chores {
  id bigint [pk, increment]
  name varchar(150) [not null]
  description text
  zone_id bigint [not null]
  assignee_id bigint [not null]
  frequency chore_frequency [not null]
  recurrence_anchor_day integer [note: '1 a 31 para recurrencia mensual']
  next_due_date date [not null]
  is_active boolean [not null, default: true]
  created_by_id bigint
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    (assignee_id, is_active)
  }
}

Table completions {
  id bigint [pk, increment]
  chore_id bigint [not null]
  completed_by_id bigint [not null]
  scheduled_for date [not null]
  completed_at timestamptz [not null]
  note text

  Indexes {
    (chore_id, scheduled_for) [unique, name: 'one_completion_per_occurrence']
    (completed_by_id, completed_at)
  }
}

Ref: chores.zone_id > zones.id
Ref: chores.assignee_id > users.id
Ref: chores.created_by_id > users.id
Ref: completions.chore_id > chores.id
Ref: completions.completed_by_id > users.id
